apps/booklore/booklore-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: booklore
spec:
  selector:
    app: booklore
  ports:
    - name: http
      port: 6060
      targetPort: 6060
